# LDT-Glavcontrol-24

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 20230525_171301_init_users-68092a1b2729.py  20240614_200220_init_projects-ec64f39c60ca.py
backend/data/: mock.docx  рекомендации (1).json  рекомендации.json  рекомендации_1_квартал.json  рекомендации_2_квартал.json  рекомендации_3_квартал.json  рекомендации_4_квартал.json
backend/main/: run_server.py  run_server_gunicorn.py
backend/scripts/: init_db_for_android.py  init_db_prod.py  init_db_users_only.py
backend/src/db/: common.py  main_db_manager.py
backend/src/db/projects/: db_manager.py  models.py
backend/src/db/projects/db_manager/: __init__.py  application.py  application_product.py  company.py  forecast.py  procurement.py  product.py  remains.py  user_company.py
backend/src/db/projects/models/: __init__.py  application.py  application_product.py  company.py  forecast.py  procurement.py  product.py  remains.py  user_company.py
backend/src/db/users/: db_manager.py  models.py
backend/src/db/users/db_manager/: user.py  user_password.py  user_token.py
backend/src/server/: amqp.py  auth.py  auth_utils.py  common.py  forecasting.py  forecasting_constants.py  generate_docs.py  properties.py  server.py
backend/src/server/projects/: __init__.py  endpoints.py  models.py  router.py
backend/src/server/users/: endpoints.py  endpoints_old.py  models.py  router.py
bot/: main.py  (+10 more)
(+295 files in other folders)
